Added stacked area example to tutorials

--- a/doc/Tutorials/Elements.ipynb
+++ b/doc/Tutorials/Elements.ipynb
@@ -337,7 +337,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ``Bars`` <a id='Bars'></a>"
+    "#### Stacked areas\n",
+    "\n",
+    "Areas are also useful to visualize multiple variables changing over time, but in order to be able to compare them the areas need to be stacked. Therefore the ``operation`` module provides the ``stack_area`` operation which makes it trivial to stack multiple Area in an (Nd)Overlay.\n",
+    "\n",
+    "In this example we will generate a set of 5 arrays representing percentages and create an Overlay of them. Then we simply call the ``stack_area`` operation on the Overlay to get a stacked area chart."
    ]
   },
   {
@@ -345,6 +349,33 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "values = np.random.rand(5, 20)\n",
+    "percentages = (values/values.sum(axis=0)).T*100\n",
+    "\n",
+    "overlay = hv.Overlay([hv.Area(percentages[:, i], vdims=[hv.Dimension('value', unit='%')]) for i in range(5)])\n",
+    "overlay + hv.operation.stack_area(overlay)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### ``Bars`` <a id='Bars'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
